--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "md5": "^2.2.1",
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "request": "^2.88.0",
+    "swagger-jsdoc": "^1.3.0"
   }
 }
