--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start:dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "consolidate": "^0.15.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "eslint": "^6.1.0",
@@ -15,6 +16,7 @@
     "md5": "^2.2.1",
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
+    "nodemon": "^2.0.2",
     "pug": "2.0.0-beta11",
     "request": "^2.88.0",
     "swagger-jsdoc": "^1.3.0"
