--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "consolidate": "^0.15.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "ejs": "^3.0.1",
     "eslint": "^6.1.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
