--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ejs": "^3.0.1",
     "ejs-locals": "^1.0.2",
     "eslint": "^6.1.0",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
+    "express-device": "^0.4.2",
     "http-errors": "~1.6.3",
     "md5": "^2.2.1",
     "morgan": "~1.9.1",
